--- a/style.css
+++ b/style.css
@@ -40,3 +40,59 @@
 {
     color: #ff7700;
 }
+
+.environment_li
+{
+    margin-top: 13px;
+}
+
+.environment_li h4
+{
+    border-bottom: 1px solid white;
+    padding: 8px;
+}
+
+.environment_li img
+{
+    border-radius: 25px;
+}
+
+.environment_li p
+{
+    margin-top: 10px;
+}
+
+.header_entrepreneur
+{
+    line-height: 2px;
+}
+
+.book
+{
+    cursor: pointer;
+}
+
+.book hr
+{
+    margin-bottom: 10px;
+}
+
+.modal-content
+{
+    margin-top: 10px;
+}
+
+.img_modal
+{
+    display: inline-block;
+}
+
+.p_modal
+{
+    margin-top: 10px;
+}
+
+.modal-body
+{
+    text-align: center;
+}
